# society-in-silico

./: .gitignore  LICENSE  Makefile  OBSIDIAN-SETUP.md  PUBLICATION-CHECKLIST.md  README.md  _quarto.yml  dashboard.html  ea-forum-value-forecasting.md  index.md  myst.yml  outline.md  pyproject.toml  references.bib
.beads/: issues.jsonl
.claude/: CLAUDE.md  launch.json
.claude-plugin/: plugin.json
.obsidian/: app.json  core-plugins.json
agents/: chapter-reviewer.md  consistency-checker.md  factchecker.md  reader-academic.md  reader-general.md  reader-journalist.md  reader-policy-wonk.md  reader-tech-skeptic.md  research-linker.md  style-editor.md
commands/: check-facts.md  edit-style.md  review-chapter.md  word-count.md
dashboard-app/: index.html  package-lock.json  package.json
exports/: policyengine_uncertainty_demo_2026-03-31.json  society-in-silico-listen.docx  society-in-silico-listen.md
feedback/: consistency-review.md  factcheck-review.md  reader-academic.md  reader-general.md  reader-journalist.md  reader-policy-wonk.md  reader-synthesis.md  reader-tech-skeptic.md  research-links-review.md  style-review.md  synthesis.md
manuscript/: 00-outline.md
reference/: max-ghenis-writing-style.md
research/: academic-literature-review.md  ai-implications-research.md  chapter-mapping.md  policy-modeling-landscape-2019-2021.md  policyengine-validation.md  validation-cases.md
reviews/: README.md  hadfield-feedback-synthesis.md
scripts/: book_dashboard.py  book_toc.py  build_listen_edition.py  check_book.py  concept_tracker.py  regen_chapters.py  (+1 more)
(+174 files in other folders)
